JAVASCRIPT ADDED FOR LOGIN WRONG USER INPUTS

--- a/.hintrc
+++ b/.hintrc
@@ -16,6 +16,13 @@
       {
         "label": "off"
       }
-    ]
+    ],
+    "axe/parsing": [
+      "default",
+      {
+        "duplicate-id-active": "off"
+      }
+    ],
+    "button-type": "off"
   }
 }
